--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#particles {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -10;
+}
